マイクラが落ちる問題を修正。

--- a/src/main/resources/nukkit.yml
+++ b/src/main/resources/nukkit.yml
@@ -1,13 +1,13 @@
 name: CPhone
 main: net.comorevi.cphone.plugin.Main
 version: 1.0.0
-load: POSTWORLD
-author: popkechupki
+author: itsu
+authors: ["comorevi"]
 api: ["1.0.0"]
 description: "The next step for CPhone"
 
 commands:
-  setHomeMessage:
+  sethomemessage:
     usage: "/setHomeMessage [message]"
     description: "しふぉんのデフォルトのお知らせを設定。"
     default: op
