--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,14 @@
 
      steps:
        - checkout
-       - restore_cache:
-             key: repo-{{ checksum "pom.xml" }}
-       - run: mvn dependency:go-offline
-       - save_cache:
-           paths:
-             - ~/.m2
-           key: repo-{{ checksum "pom.xml" }}
+       - run: mvn clean
+       ##- restore_cache:
+       ##      key: repo-{{ checksum "pom.xml" }}
+       ##- run: mvn dependency:go-offline
+       ##- save_cache:
+       ##    paths:
+       ##      - ~/.m2
+       ##    key: repo-{{ checksum "pom.xml" }}
        - run: mvn package
        - store_test_results:
            path: target/surefire-reports
