--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
     <repositories>
         <repository>
-            <id>regularbox</id>
-            <url>http://ci.regularbox.com/plugin/repository/everything/</url>
-        </repository>
+	  <id>nukkit-repo</id>
+	  <url>https://repo.nukkitx.com/snapshot</url>
+	</repository>
 
         <repository>
             <id>github</id>
