--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,20 @@
-# Java Maven CircleCI 2.0 configuration file
+# Java Maven CircleCI 2.0 configuration file.
+# そもそもそんなに遅くないのでキャッシュは取らないで実行します。
  version: 2
  jobs:
    build:
      working_directory: ~/repo
 
      docker:
-       - image: circleci/openjdk:10.0.2-jdk
+       - image: circleci/openjdk:openjdk-8
 
      environment:
-       # Customize the JVM maximum heap limit
-       MAVEN_OPTS: -Xmx2048m
+       # Customize the JVM maximum heap limit.
+       MAVEN_OPTS: -Xmx3200m
 
      steps:
        - checkout
        - run: mvn clean
-       ##- restore_cache:
-       ##      key: repo-{{ checksum "pom.xml" }}
-       ##- run: mvn dependency:go-offline
-       ##- save_cache:
-       ##    paths:
-       ##      - ~/.m2
-       ##    key: repo-{{ checksum "pom.xml" }}
        - run: mvn package
        - store_test_results:
            path: target/surefire-reports
