--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.comorevi</groupId>
     <artifactId>CPhone</artifactId>
-    <version>1.0.2</version>
+    <version>1.0-SNAPSHOT</version>
 
 
     <properties>
@@ -17,9 +17,9 @@
 
     <repositories>
         <repository>
-	  <id>nukkit-repo</id>
-	  <url>https://repo.nukkitx.com/snapshot</url>
-	</repository>
+	        <id>nukkit-repo</id>
+	        <url>https://repo.nukkitx.com/snapshot</url>
+	    </repository>
 
         <repository>
             <id>github</id>
