--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@
      working_directory: ~/repo
 
      docker:
-       - image: circleci/openjdk:openjdk-8
+       - image: circleci/openjdk:8u242-jdk
 
      environment:
        # Customize the JVM maximum heap limit.
