--- a/src/main/resources/nukkit.yml
+++ b/src/main/resources/nukkit.yml
@@ -1,8 +1,8 @@
 name: CPhone
 main: net.comorevi.cphone.plugin.Main
-version: 1.3.7
+version: 1.3.8
 author: itsu
-authors: ["comorevi"]
+authors: ["popkechupki"]
 api: ["1.0.0"]
 description: "The next step framework for CPhone"
 
